Fix opacity transition for notification,
not to overlap with the global fade class

--- a/app/assets/stylesheets/notification.css.scss
+++ b/app/assets/stylesheets/notification.css.scss
@@ -5,6 +5,11 @@
     -webkit-box-shadow: 0px 0px 10px 1px rgba(50, 50, 50, 0.60);
     -moz-box-shadow:    0px 0px 10px 1px rgba(50, 50, 50, 0.60);
     box-shadow:         0px 0px 10px 1px rgba(50, 50, 50, 0.60);
+    opacity: 0;
+    -webkit-transition: opacity 1s;
+    -moz-transition: opacity 1s;
+    -o-transition: opacity 1s;
+    transition: opacity 1s;
 }
 
 .alert-container {
@@ -17,13 +22,5 @@
     pointer-events: none;
     background-color: rgba(255,255,255, 0);
     opacity: 0.95;
-}
-
-.fade {
-    opacity: 0;
-    -webkit-transition: opacity 1s;
-    -moz-transition: opacity 1s;
-    -o-transition: opacity 1s;
-    transition: opacity 1s;
 }
 
